k8s/18-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: spark
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: spark
spec:
  progressDeadlineSeconds: 1800
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.4.7
          args: ["start-dev"]
          ports:
            - containerPort: 8080
              name: http

          startupProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 240
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 1

          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 30

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: spark
spec:
  ingressClassName: nginx
  rules:
    - host: ${KEYCLOAK_HOST}.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
